# shamwari-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  openapi.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/platform/: .env.example  README.md  package.json  vercel.json
apps/platform/app/: env.ts  error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/: .env.example  README.md  components.json  microfrontends.json  middleware.ts  next.config.ts  package.json  tsconfig.json  vercel.json
apps/web/app/: env.ts  globals.css  layout.tsx  page.tsx
scripts/: export_openapi.py
src/: main.py
src/db/: couch.py  designs.py  init.py
src/models/: __init__.py  ai_model.py  api_key.py  audit_log.py  base.py  billing.py  conversation.py  dataset.py  feedback.py  message.py  organization.py  usage.py  user.py
src/routers/: __init__.py  api_keys.py  billing.py  conversations.py  datasets.py  feedback.py  inference.py  models.py  organizations.py  usage.py  users.py
src/schemas/: __init__.py  api_keys.py  base.py  billing.py  common.py  conversations.py  datasets.py  feedback.py  models.py  organizations.py  usage.py  users.py
tasks/: lessons.md  todo.md
